[package]
name = "omekasy"
version = "1.2.3"
authors = ["ikanago <ikanago-dev@protonmail.com>"]
description = "Decorate alphanumeric characters in your input with various font; special characters in Unicode"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ikanago/omekasy"
edition = "2021"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
crossterm = { version = "0.26.1", optional = true }

[features]
default = ["crossterm"]

[profile.dev]
debug = 0

[profile.release]
strip = "symbols"
